automatically merged revision 799834: likewise, make sure we always use the padding edge when calculating the width of a positioned object's containing block. (10.1.4)

BUG: 137606

svn path=/branches/KDE/4.0/kdelibs/; revision=799848